fix: Исправила AdminCategoriesController